Fixed font size on 1 page only and increased size a bit on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ nav {
 }
 nav a, li a {
     text-decoration: none;
-    font-size: .75em;
+    font-size: .85em;
 }
 .about-info {
     background-color: #F7B733;
